# android-systemd-container

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  Makefile  README.md  README_CN.md  flake.nix
.github/workflows/: ci.yml  rootfs.yml
Android/app/: build.gradle.kts
Android/app/src/main/assets/: post_extract_fixes.sh
Android/app/src/main/assets/boot-module/: post-fs-data.sh
Android/app/src/main/java/com/droidspaces/app/ui/component/: RootfsRepoSheet.kt
Android/app/src/main/java/com/droidspaces/app/util/: BinaryInstaller.kt  ContainerManager.kt  ContainerOSInfoManager.kt  ModuleInstaller.kt  RootfsDownloadManager.kt  RootfsRepository.kt  ValidationUtils.kt
Android/app/src/main/res/values/: strings.xml
Android/app/src/main/res/values-cbk-rPH/: strings.xml
Android/app/src/main/res/values-ceb-rPH/: strings.xml
Android/app/src/main/res/values-de/: strings.xml
Android/app/src/main/res/values-es/: strings.xml
Android/app/src/main/res/values-fil/: strings.xml
Android/app/src/main/res/values-fr/: strings.xml
Android/app/src/main/res/values-hi/: strings.xml
Android/app/src/main/res/values-ilo-rPH/: strings.xml
Android/app/src/main/res/values-in/: strings.xml
Android/app/src/main/res/values-it/: plurals.xml  strings.xml
Android/app/src/main/res/values-ja/: plurals.xml  strings.xml
Android/app/src/main/res/values-km/: strings.xml
Android/app/src/main/res/values-pag-rPH/: strings.xml
Android/app/src/main/res/values-pt/: strings.xml
Android/app/src/main/res/values-pt-rBR/: strings.xml
Android/app/src/main/res/values-ro/: strings.xml
Android/app/src/main/res/values-ru/: strings.xml
Android/app/src/main/res/values-si/: strings.xml
Android/app/src/main/res/values-tr/: strings.xml
Android/app/src/main/res/values-zh-rCN/: strings.xml
Android/app/src/main/res/values-zh-rTW/: strings.xml
Documentation/: Cool-things-you-can-do.md  Cool-things-you-can-do_CN.md  Features_CN.md  GPU-Acceleration.md  GPU-Acceleration_CN.md  Installation-Android_CN.md  Installation-Linux_CN.md  Kernel-Configuration_CN.md  Linux-CLI_CN.md  Nix-NixOS_CN.md  Troubleshooting_CN.md  Uninstallation_CN.md  Usage-Android-App_CN.md  community-supported-devices.md  community-supported-devices_CN.md
Documentation/zh-CN/: Cool-things-you-can-do.md  Features.md  GPU-Acceleration.md  Installation-Android.md  Installation-Linux.md  Kernel-Configuration.md  Linux-CLI.md  Usage-Android-App.md  community-supported-devices.md
init/: README_CN.md
src/: android.c  boot.c  boot.rs  cgroup.c  cgroup.rs  check.c  check.rs  config.c  config.rs  console.c  console.rs  constants.rs  container.c  container.rs  create_img.c  daemon.c  daemon.rs  droidspace.h  hardware.c  hardware.rs  lib.rs  main.c  main.rs  monitor.c  mount.c  mount.rs  netlink.c  netlink.rs  nl_macros.rs  pid.c  pid.rs  seccomp.c  seccomp.rs  socketd_bridge.c  socketd_protocol.h  terminal.c  terminal.rs  types.rs  utils.c  utils.rs  (+2 more)
src/include/: asc.h  droidspace.h  ds-fork.h  version.h.in  virtualize.h
src/net/: netlink.c
src/socketd/: api_server.cpp
(+9 files in other folders)
